Fixed spacing issues

--- a/app/styles/kilroe.css
+++ b/app/styles/kilroe.css
@@ -117,7 +117,7 @@ textarea {
   top: 0;
   left: 0;
   width: 100%;
-  height: 70px;
+  height: 50px;
   background: rgba(0, 0, 0, 0.7);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   z-index: 10;
@@ -129,9 +129,9 @@ textarea {
 }
 .header .logo {
   float: left;
-  margin: 9px 0 0 5%;
+  margin: 8px 0 0 3%;
   font-family: abite;
-  font-size: 30px;
+  font-size: 24px;
   color: #fff;
 }
 .header .logo img {
@@ -184,7 +184,7 @@ textarea {
 .main-nav ul {
   position: static;
   width: auto;
-  line-height: 70px;
+  line-height: 55px;
   transform: none;
 }
 .main-nav li {
@@ -227,7 +227,7 @@ textarea {
   color: #333;
 }
 .admin-container {
-  padding: 90px 0 0 30px;
+  padding: 0 0 100px 30px;
   background: #fff;
 }
 .admin-tour-list-container {
@@ -265,12 +265,16 @@ textarea {
   width: 100%;
   text-transform: uppercase;
 }
-.content-section {
-  margin-bottom: 25px;
-  padding-bottom: 50px;
-  border-bottom: 2px dashed #999;
-}
 .news-text-area {
   width: 400px;
   height: 150px;
+}
+.section-title {
+  padding-top: 50px;
+  margin-top: 50px;
+  border-top: 2px dashed #999;
+}
+.section-title-top {
+  padding-top: 50px;
+  border: none;
 }
