--- a/app/styles/less/kilroe/admin.less
+++ b/app/styles/less/kilroe/admin.less
@@ -1,5 +1,5 @@
 .admin-container {
-    padding: 90px 0 0 30px;
+    padding: 0 0 100px 30px;
     background: #fff;
 }
 
@@ -48,9 +48,7 @@
 }
 
 .content-section {
-    margin-bottom: 25px;
-    padding-bottom: 50px;
-    border-bottom: 2px dashed #999;
+
 }
 
 .news-text-area {
@@ -58,3 +56,13 @@
     height: 150px;
 }
 
+.section-title {
+    padding-top: 50px;
+    margin-top: 50px;
+    border-top: 2px dashed #999;
+}
+
+.section-title-top {
+    padding-top: 50px;
+    border: none;
+}
