--- a/app/styles/less/kilroe/main_nav.less
+++ b/app/styles/less/kilroe/main_nav.less
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 70px;
+    height: 50px;
     background: rgba(0, 0, 0, 0.7);
     box-shadow: @main-shadow;
     z-index: 10;
@@ -17,9 +17,9 @@
 
 .header .logo {
     float: left;
-    margin: 9px 0 0 5%;
+    margin: 8px 0 0 3%;
     font-family: abite;
-    font-size: 30px;
+    font-size: 24px;
     color: #fff;
 }
 
@@ -81,7 +81,7 @@
     ul {
         position: static;
         width: auto;
-        line-height: 70px;
+        line-height: 55px;
         transform: none;
 
     }
